--- a/src/Components/BlogPost/BlogPost.css
+++ b/src/Components/BlogPost/BlogPost.css
@@ -2,10 +2,11 @@
     overflow: hidden;
     margin: 0 auto;
     border: 1px solid black;
-    margin-top: 5px;
+    margin-top: 20px !important;
 }
 .makeStyles-root-1 {
-    padding: 20px 0px;
+    box-shadow: -1px -1px 20px 0px rgba(207, 66, 66, 0.664) !important;
+    padding: 40px 0px !important;
 }
 span.titles{
     font-weight: bold;
