--- a/src/Components/BlogPost/BlogPost.css
+++ b/src/Components/BlogPost/BlogPost.css
@@ -1,10 +1,6 @@
 .MuiCard-root {
-    overflow: hidden;
-    margin: 0 auto;
-    border: 1px solid black;
+    margin: auto;
     margin-top: 20px !important;
-}
-.makeStyles-root-1 {
     box-shadow: -1px -1px 20px 0px rgba(207, 66, 66, 0.664) !important;
     padding: 40px 0px !important;
 }
